# sentinel-k8s-deployment

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  build.sh  eck-helm.yaml  elasticsearch-install.yaml  install-agent.sh  install.sh  local-path-storage.yaml  local-storage-provisioner.yaml  populate.sh  rancher.yaml  sbom.sh  smb.yaml
charts/elastic/: values.yaml
charts/elastic/templates/: _helpers.tpl  certmanager.yaml  elasticsearch-ingress.yaml  elasticsearch.yaml  kibana-ingress.yaml  kibana.yaml  lad-role.yaml  lad-user.yaml  logstash-role.yaml  logstash-user.yaml  required.yaml  virusalert-role.yaml  virusalert-user.yaml
charts/email-sender/: Chart.yaml  values.yaml
charts/email-sender/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/lad/: Chart.yaml  values.yaml
charts/samba-honeypot/: Chart.yaml  values.yaml
charts/system/: Chart.yaml  values.yaml
charts/teapot/: .helmignore  Chart.yaml  values.yaml
charts/tpot-honeypots/: Chart.yaml  values.yaml
charts/virusalert/: Chart.yaml  values.yaml
charts/virusalert/container/virusalert/: pyproject.toml
charts/virusalert/container/virusalert/virusalert/: __main__.py  alerter.py  config.py  humanize.py
manifests/: busybox.yaml  elastic-stack.yaml  honeynet.yaml  samba-basic.yaml  samba-honeypot.yaml  sambacc.yaml
values/: elastic.yaml  honeypot-1.yaml  honeypot-2.yaml  honeypot-3.yaml  honeypot-4.yaml  honeypot1.yaml  honeypot2.yaml  honeypot3.yaml  virusalert-config.yaml  virusalert-secret.yaml  virusalert.yaml
(+185 files in other folders)
